--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,7 @@ span.studiolog {
   padding-bottom: 120px;
 }
 .title-action {
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 .our-team {
   padding-top: 72px;
@@ -279,15 +279,13 @@ span.type {
 }
 .card-images {
   display: flex;
-  gap: 24px;
-
+  gap: 48px 24px;
   flex-wrap: wrap;
   flex-basis: calc(100% / 3);
 }
 .second-card-content {
   padding-top: 32px;
   padding-bottom: 32px;
-  margin-bottom: 24px;
   padding-left: 16px;
   background-color: #ffffff;
   border: 1px solid #e7e9fc;
@@ -300,4 +298,7 @@ span.type {
   display: block;
   max-width: 100%;
   height: auto;
+}
+.cards-teams {
+  flex-basis: auto;
 }
